Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14483

decltype is not resolved

XMLWordPrintable

    • de68ac54073cc3389abcc4cdaa0131bca7a44874, b5f6a9e6e57c0b43878167e3f1036516f21018e4 07f8c474be629de75780d235df62a50ae6f27870

      struct Foo { int bar; };
      Foo foo() { return Foo; }
      typedef decltype(foo()) TypedefedFooWithDecltype;
      
      template <typename _Tp>
      struct Temp
      {
          struct Nested
          {
              static _Tp f();
              typedef decltype(f()) type;
          };
          typedef typename Nested::type type;
      };
      
      void fun()
      {
          // simple
          decltype(foo()) decltypeFoo;
          decltypeFoo.;// code completion should work here
      
          // typedef
          TypedefedFooWithDecltype typedefedFooWithDecltype;
          typedefedFooWithDecltype.;// code completion should work here
      
          // nested instantiation typedef
          Temp<Foo>::type nestedDeclType;
          nestedDeclType.; // code completion should work here
      }

        For Gerrit Dashboard: QTCREATORBUG-14483
        # Subject Branch Project Status CR V

            orgads Orgad Shaneh
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes